
  9) The Canon driver now also supports the CD fine adjustment controls.

  10) The resolutions for the Canon S300 have been fixed.
 
  11) Printing to Canon PIXMA printers that are connected to Microsoft
     Windows hosts has been fixed (bug 1625202).

  12) The Postscript driver now handles CMYK input correctly, fixing a
     problem with Cinepaint (bug 1701954).


----------------

B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:

  1) New printers supported in this release:

     * Dye sublimation printers:

       The driver for these printers has been renamed "dyesub", as
       many of the printers are manufactured by companies other than
       Olympus.

       Canon CP-10
       Fujifilm FinePix NX-500
       Kodak Easyshare Printer
       Olympus P-S100
       Sony DPP-EX5
       Sony UP-DR100

     * Canon inkjet printers:

       The support for these printers is under development, and there
       are known issues with these printers.  Please check with the
       mailing list (gimp-print-devel@lists.sourceforge.net) if you
       have any questions.

       Canon PIXMA iP2000
       Canon PIXMA iP3000
       Canon PIXMA iP3100
       Canon PIXMA iP4100
       Canon PIXMA iP4200
       Canon PIXMA iP4300
       Canon PIXMA iP5000
       Canon PIXMA iP5200
       Canon PIXMA iP6700
       Canon MULTIPASS MP150
       Canon MULTIPASS MP500
       Canon MULTIPASS MP700
       Canon MULTIPASS MP730
       Canon MULTIPASS MP750
       Canon MULTIPASS MP760
       Canon MULTIPASS MP770
       Canon MULTIPASS MP780
       Canon MULTIPASS MP790
       Canon MULTIPASS MP830
       Canon PIXUS iP3100
       Canon PIXUS iP4100
       Canon i560
       Canon i850
       Canon i860
       Canon i865

     * Epson inkjet printers:

       Epson Stylus CX5000
       Epson Stylus CX5000F
       Epson Stylus CX6000
       Epson Stylus CX7000F

     * Lexmark inkjet and compatible printers:

       Compaq IJ1200
       Lexmark X73
